# generative_agents_for_accident

./: .gitignore  README.md  compress_sim_storage.py  pyproject.toml  requirements.txt  test.py
backend/: global_methods.py  maze.py  original_events.py  path_finder.py  reverie.py  test.py  utils.py
backend/persona/: persona.py
backend/persona/cognitive_modules/: converse.py  execute.py  perceive.py  plan.py  reflect.py  retrieve.py
backend/persona/memory_structures/: associative_memory.py  scratch.py  spatial_memory.py
backend/persona/prompt_template/: gpt_structure.py  print_prompt.py  run_gpt_prompt.py
config/the_ville/: maze_meta_info.json
frontend/: db.sqlite3
frontend/compressed_storage/July1_the_ville_isabella_maria_klaus-step-3-9/: master_movement.json
frontend/compressed_storage/a1/: master_movement.json
frontend/compressed_storage/a10/: master_movement.json
frontend/compressed_storage/a11/: master_movement.json
frontend/compressed_storage/a12/: master_movement.json  meta.json
frontend/compressed_storage/a14/: master_movement.json
frontend/compressed_storage/a15/: master_movement.json
frontend/compressed_storage/a17/: master_movement.json
frontend/compressed_storage/a3/: master_movement.json
frontend/compressed_storage/a4/: master_movement.json
frontend/compressed_storage/a6/: master_movement.json
frontend/compressed_storage/a8/: master_movement.json
frontend/compressed_storage/run_away2/: meta.json  (+1 more)
frontend/frontend_server/: urls.py
frontend/temp_storage/: curr_sim_code.json  progress.json
frontend/translator/: views.py
(+7562 files in other folders)
